<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/maps"
        android:title="@string/title_activity_maps"
        app:showAsAction="always"/>
    <item android:id="@+id/filter"
        android:title="@string/filter"
        app:showAsAction="never"/>
    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never"/>

</menu>