<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/shelterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shelterAddress"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/shelterAddress"
        android:layout_alignEnd="@+id/shelterCapacity"
        android:text="@string/shelterName"
        android:layout_alignRight="@+id/shelterCapacity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shelterCapacity"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/shelterName"
        android:text="@string/capacity"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shelterAddress"
        android:layout_below="@id/shelterName"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:text="@string/address"/>
</RelativeLayout>